<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/heart_live_two"
    android:gravity="center"
    android:id="@+id/update_activity"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".UpdateActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Update record"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="60dp"
        android:text="UPDATE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="81dp"
        android:drawableLeft="@drawable/ic_baseline_access_time_24"
        android:ems="10"
        android:hint="Time(hh:mm)"
        android:inputType="time"
        android:textColorHint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="227dp"
        android:layout_height="49dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="81dp"
        android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
        android:ems="10"
        android:hint="Date(dd/mm/yyyy)"
        android:inputType="date"
        android:textColorHint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="247dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="81dp"
        android:drawableLeft="@drawable/ic_baseline_keyboard_double_arrow_up_24"
        android:ems="10"
        android:hint="Diastolic Pressure(mmHg)"
        android:inputType="textPersonName"
        android:textColorHint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="81dp"
        android:drawableLeft="@drawable/ic_baseline_keyboard_double_arrow_down_24"
        android:ems="10"
        android:hint="Systolic Pressure(mmHg)"
        android:inputType="textPersonName"
        android:textColorHint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="81dp"
        android:drawableLeft="@drawable/ic_baseline_monitor_heart_24"
        android:ems="10"
        android:hint="Heart Rate(bpm)"
        android:inputType="textPersonName"
        android:textColorHint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="68dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/hrtt" />


    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="72dp"
        android:drawableLeft="@drawable/ic_baseline_fact_check_24"
        android:ems="10"
        android:hint="Comment"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />



</androidx.constraintlayout.widget.ConstraintLayout>