<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/dias"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:text="Diastolic Pressure:"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sys"
        android:layout_width="399dp"
        android:layout_height="34dp"
        android:text="Systolic Pressure:"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/heart"
        android:layout_width="399dp"
        android:layout_height="34dp"
        android:text="Heart Rate:"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time"
        android:layout_width="399dp"
        android:layout_height="34dp"
        android:text="Time:"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="399dp"
        android:layout_height="34dp"
        android:text="Date:"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="399dp"
        android:layout_height="34dp"
        android:text="Comment:"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.github.clans.fab.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editButton"
        android:src="@drawable/ic_baseline_edit_24"
        app:fab_showShadow="true"
        android:visibility="visible"
        app:fab_colorNormal="@color/green"
        app:fab_size="mini"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_delete_24"
        android:visibility="visible"
        app:fab_colorNormal="@color/red"
        app:fab_showShadow="true"
        app:fab_size="mini" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:menu_fab_size="normal"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/btnList"
            app:menu_colorPressed="@color/purple_200"
            app:menu_colorNormal="@color/purple_200"
            app:menu_icon="@drawable/ic_baseline_format_list_bulleted_24"
            app:menu_openDirection="up"
            android:clickable="true"
            app:menu_showShadow="true"
            >








        </com.github.clans.fab.FloatingActionMenu>

        </RelativeLayout>



</LinearLayout>